# hs-mat

./: .gitignore  LICENSE  README.md  hs-mat.cabal  stack.base.yaml
app/: Main.hs
csrc/: cpputil.cpp  matdemo.cpp
src/: Lib.hs  MatDemo.hs
