name:                hs-mat
version:             0.1.0.0
synopsis:            Demostrates usage of matlab
-- description:
homepage:            https://github.com/zelinf/hs-mat#readme
license:             BSD3
license-file:        LICENSE
author:              zelinf
maintainer:          contact@zelinf.net
copyright:           (c) 2018 Zelin Feng
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MatDemo
  c-sources:           csrc/matdemo.cpp
                     , csrc/cpputil.cpp
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , vector
  extra-libraries:     MatlabEngine
                     , MatlabDataArray
                     , pthread
                     , stdc++
  default-language:    Haskell2010

executable app
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:       base
                     , hs-mat
  default-language:    Haskell2010
